# symfinder

./: .dockerignore  .gitignore  .travis.yml  README.md  acceptance-tests-compose.yaml  argouml-feature-mapping.sh  build.bat  build.sh  clean.sh  detection_method.md  features-mapper-compose.yaml  integration-tests-compose.yaml  pom.xml  rerun.bat  rerun.sh  run.bat  run.sh  run_acceptance_tests.sh  run_integration_tests.sh  run_visualization_tests.sh  runner-compose.yaml  sat4j-feature-mapping.sh  selected_classes.txt  symfinder-compose-optimized.yaml  symfinder-compose.yaml  symfinder.yaml  traces_format.md  visualization-compose.yaml  visualization-tests-compose.yaml  visualization.bat  visualization.sh
ArgoUML_groundTruth/: ACTIVITYDIAGRAM.txt  COGNITIVE.txt  COGNITIVE_and_DEPLOYMENTDIAGRAM.txt  COGNITIVE_and_LOGGING.txt  COGNITIVE_and_SEQUENCEDIAGRAM.txt  COLLABORATIONDIAGRAM.txt  COLLABORATIONDIAGRAM_and_LOGGING.txt  COLLABORATIONDIAGRAM_and_SEQUENCEDIAGRAM.txt  DEPLOYMENTDIAGRAM_and_LOGGING.txt  DEPLOYMENTDIAGRAM_and_USECASEDIAGRAM.txt  STATEDIAGRAM.txt  (+4 more)
test_projects/cpp/: CMakeLists.txt  Makefile  pom.xml
test_projects/cpp/cpp_decorator/: Damido.cpp  Damido.h  HorizontalScrollBarDecorator.cpp  HorizontalScrollBarDecorator.h  LauraR.cpp  LauraR.h  PrettyDecorator.cpp  PrettyDecorator.h  VerticalScrollBarDecorator.cpp  VerticalScrollBarDecorator.h  Window.cpp  Window.h  WindowScrollBar.cpp  WindowScrollBar.h  main.cpp
test_projects/cpp/cpp_strategy/: BubbleSortStrategy.cpp  Professor.cpp  QuickSortStrategy.cpp  SortStrategy.cpp  main.cpp
test_projects/cpp/macro/: Bar.cpp  Foo.cpp  main.cpp
test_projects/cpp/multiple-inheritance/: main.cpp
test_projects/cpp/multiple-inheritance/basic-inheritance/: Animal.h  Carnivore.h  Cow.h  Herbivore.h  Tiger.h
test_projects/cpp/multiple-inheritance/diamond-inheritance/: Rectangle.h  Rhombus.h  Shape.h  Square.h
test_projects/cpp/shape/: Circle.cpp  Rectangle.cpp  Shape.cpp  main.cpp
test_projects/cpp/shape-h/: Circle.cpp  Circle.h  Makefile  Rectangle.cpp  Rectangle.h  Shape.h  main.cpp
test_projects/cpp/shape-namespace/: main.cpp
test_projects/cpp/shape-namespace/Shape/: Shape.cpp
test_projects/cpp/shape-namespace/dimension2/: Circle.cpp  Rectangle.cpp
test_projects/cpp/shape-namespace/dimension3/: Circle.cpp
test_projects/cpp/template-class/: Integer.cpp  IntegerShape.cpp  Long.cpp  Parallelepiped.cpp  ShapeTemplate.cpp  Value.cpp  main.cpp
test_projects/cpp/template-specialization/: Optional.cpp  main.cpp
(+259 files in other folders)
